crates/language-v2/tests/src/fail/p2_specifiers/hard_fork_redundant_range_from/test.stderr
error: 'Range' starting from the first supported hard fork 'Frontier' can be simplified to 'Till'.
  --> src/fail/p2_specifiers/hard_fork_redundant_range_from/test.rs:25:91
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = Range(from = Frontier, till = Cancun))]
   |                                                                                           ^^^^^^^^
